@@ -4,6 +4,7 @@ Jython 2.5.3a1
   Bugs Fixed
     - [ 1727 ] Error in Jython 2.5.2 with os.stat and varargs
     - [ 1735 ] return type of os.read is unicode, not str
+    - [ 1755 ] os.utime('/tmp/nonexistent-file', None) fails to raise OSError
 
 Jython 2.5.2
   same as 2.5.2rc4
